--- a/RoundSolitareGame/RoundSolitareGame.csproj
+++ b/RoundSolitareGame/RoundSolitareGame.csproj
@@ -47,6 +47,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Classes\Board.cs" />
+    <Compile Include="Classes\CenterPlayField.cs" />
+    <Compile Include="Classes\NormalPlayField.cs" />
     <Compile Include="Classes\PlayField.cs" />
     <Compile Include="Classes\PlayFieldTypes.cs" />
     <Compile Include="Form1.cs">
